fix: wrap text if small screen AB#12070

--- a/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.scss
+++ b/interfaces/IBF-dashboard/src/app/components/aggregates/aggregates.component.scss
@@ -38,9 +38,10 @@
   .aggregate-item-label {
     text-transform: capitalize;
     line-height: 1.2;
-    padding: 4px 8px;
     font-size: 12px;
     margin: 0px !important;
+    white-space: normal !important;
+    padding: 0px 8px !important;
   }
 }
 
@@ -49,9 +50,9 @@
 
   ion-label {
     margin: 0px !important;
-  }
-  span {
     font-size: 12px;
+    white-space: normal !important;
+    padding: 0px 8px !important;
   }
 }
 
